--- a/server/package.json
+++ b/server/package.json
@@ -18,5 +18,8 @@
   "homepage": "https://github.com/kunaal-gupta/Mern-Project#readme",
   "dependencies": {
     "express": "^4.18.2"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.22"
   }
 }
