--- a/client/package.json
+++ b/client/package.json
@@ -1,4 +1,5 @@
 {
+  
   "name": "client",
   "version": "0.1.0",
   "private": true,
@@ -11,6 +12,8 @@
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
+  "proxy": "http://localhost:5000",
+
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
