--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "@fortawesome/fontawesome-svg-core": "^6.4.0",
     "@fortawesome/free-solid-svg-icons": "^6.4.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "axios": "^1.4.0",
     "mongodb": "^5.7.0",
     "react-apexcharts": "^1.4.0",
     "react-hook-form": "^7.45.1",
