--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.4.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "axios": "^1.4.0",
+    "cors": "^2.8.5",
     "mongodb": "^5.7.0",
     "react-apexcharts": "^1.4.0",
     "react-hook-form": "^7.45.1",
